	its export flag and obtain its value.  When we need to re-exec,
	increment the value and add it into the environment.
	(always_make_set): New variable.  Change the -B option to set this
	one instead.
	(main): When checking makefiles, only set always_make_flag if
	always_make_set is set AND the restarts flag is 0.  When building
	normal targets, set it IFF always_make_set is set.

2005-06-17  Paul D. Smith  <psmith@gnu.org>

	* default.c: Change VMS implicit rules to use $$$$ instead of $$
	in the prerequisites list.

2005-06-12  Paul D. Smith  <psmith@gnu.org>

	Fix Savannah bug # 1328.

	* configure.in: Check for atexit().
	* misc.c (close_stdout): Test stdout to see if writes to it have
	failed.  If so, be sure to exit with a non-0 error code.  Based on
	code found in gnulib.
	* make.h: Prototype.
	* main.c (main): Install close_stdout() with atexit().

2005-06-10  Paul D. Smith  <psmith@gnu.org>

        VMS build updates from Hartmut Becker <Hartmut.Becker@hp.com>:

        * vmsjobs.c [VMS]: Updates to compile on VMS: add some missing
        headers; make vmsWaitForChildren() static; extern vmsify().
        * job.c [VMS]: Move vmsWaitForChildren() prototype to be global.
        Don't create child_execute_job() here (it's in vmsjobs.c).
        * makefile.vms (job.obj) [VMS]: Add vmsjobs.c as a prerequisite.

2005-06-09  Paul D. Smith  <psmith@gnu.org>

        * variable.c (push_new_variable_scope): File variables point
        directly to the global_setlist variable.  So, inserting a new
        scope in front of that has no effect on those variables: they
        don't go through current_variable_set_list.  If we're pushing a
        scope and the current scope is global, push it "the other way" so
        that the new setlist is in the global_setlist variable, and
        next points to a new setlist with the global variable set.
        (pop_variable_scope): Properly undo a push with the new
        semantics.
        Fixes Savannah bug #11913.
